Changes with APR 0.9.5

  *) Fix handling of negative numbers in apr_strtoi64() on platforms
     without strtoll.  [Joe Orton]

  *) Fix printing apr_int64_t values smaller than LONG_MIN on 32-bit
     platforms in apr_vformatter.  [Joe Orton]

  *) Fix apr_socket_opt_set with APR_IPV6_V6ONLY flag.  Fixes httpd
     Listen IPv6 socket behavior on FreeBSD 5.x, OpenBSD, NetBSD.
     [Justin Erenkrantz]

  *) Fix apr_time_exp_get() for dates in 2038.  
     [Philip Martin <philip codematters.co.uk>]

  *) Add APR_LARGEFILE flag to allow opening files with the
     O_LARGEFILE flag; not recommended for general use, see
     include/apr_file_io.h.  [Joe Orton]

  *) Various build fixes: thread_rwlock.c on some Solaris platforms
     (PR 22990); filestat.c on ReliantUnix (PR 22990); config.status
     on IRIX (PR 19251).  [Various]

  *) Use NI_NAMEREQD instead of NI_NUMERICHOST in
     APR_CHECK_GETNAMEINFO_IPV4_MAPPED.  PR 24469.  [Justin Erenkrantz]

  *) Ensure that apr_sockaddr_info_get() does not return anything
     other than AF_INET and AF_INET6 addresses.  [Joe Orton]

  *) Clarify that apr_dir_read() does not guarantee order of returned
     entries as previously claimed.  [Joe Orton]

  *) The whole codebase was relicensed and is now available under
     the Apache License, Version 2.0 (http://www.apache.org/licenses).
     [Apache Software Foundation]

  *) Define apr_off_t as long rather than as off_t on platforms with a
     32-bit off_t to prevent incompatibility with packages such as
     Perl which redefine the size of off_t via _FILE_OFFSET_BITS on
     some platforms.  [Ben Reser <ben reser.org>]

  *) apr_socket_connect(): allow app to make subsequent call on 
     non-blocking socket.  [Jeff Trawick]
 
  *) Add apr_os_pipe_put_ex(), which allows the caller to tell APR
     to establish a cleanup on the pipe.  [Jeff Trawick, Brad Nicholes]

  *) Fix make_exports.awk to work with apr-iconv.  [Justin Erenkrantz]

Changes with APR 0.9.4
